--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "reflect-metadata": "0.1.9",
     "rxjs": "5.0.3",
     "ts-helpers": "1.1.2",
-    "zone.js": "0.7.6"
+    "zone.js": "0.7.6", 
+    "ng2-bootstrap": "1.2.4",
+    "bootstrap": "4.0.0-alpha.5",
+    "tether": "1.4.0"
   },
   "devDependencies": {
     "@types/jasmine": "^2.2.30",
